--- a/index.html
+++ b/index.html
@@ -10,15 +10,36 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="./assets/css/style.css" />
 
     <title>Frontend Mentor | Maker pre-launch landing page</title>
   </head>
-  <body>
-    <!-- Get paid for the work you love to do.
+  <body class="page">
+    <header class="header page__header"></header>
 
-  The 9-5 grind is so last century. We believe in living life on your 
-  own terms. Whether you’re looking to escape the rat race or set up 
-  a side hustle, we’ve got you covered.
+    <main class="main page__main">
+      <div class="hero main__hero">
+        <div class="hero__text">
+          <h1>Get paid for the work you love to do.</h1>
+          <p>
+            The 9-5 grind is so last century. We believe in living life on your
+            own terms. Whether you’re looking to escape the rat race or set up a
+            side hustle, we’ve got you covered.
+          </p>
+          <img
+            class="hero__logo"
+            src="./assets/icon-scroll.svg"
+            alt="mouse"
+            width="26"
+            height="42px"
+          />
+        </div>
+      </div>
+    </main>
+
+    <!-- 
+
+  
 
   Indulge your passions
   Your passions shouldn't be just for the weekend. Earn a living doing what you love.
