finished the hero section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header page__header"></header>
 
     <main class="main page__main">
-      <div class="hero main__hero">
+      <div class="hero">
         <div class="hero__text">
           <h1>Get paid for the work you love to do.</h1>
           <p>
@@ -31,28 +31,70 @@
             src="./assets/icon-scroll.svg"
             alt="mouse"
             width="26"
-            height="42px"
+            height="42"
           />
         </div>
       </div>
+
+      <div class="feature">
+        <div class="feature__item">
+          <div class="feature__icon">
+            <img
+              src="./assets/illustration-passions.svg"
+              alt="illustration-passions"
+            />
+          </div>
+          <h4>Indulge your passions</h4>
+          <p>
+            Your passions shouldn't be just for the weekend. Earn a living doing
+            what you love.
+          </p>
+        </div>
+
+        <div class="feature__item feature__item--alternate">
+          <div class="feature__icon">
+            <img
+              src="./assets/illustration-financial-freedom.svg"
+              alt="illustration-financial-freedom"
+            />
+          </div>
+          <h4>Gain financial freedom</h4>
+          <p>
+            Start making money work for you. There’s nothing quite like earning
+            while you sleep.
+          </p>
+        </div>
+
+        <div class="feature__item">
+          <div class="feature__icon">
+            <img
+              src="./assets/illustration-lifestyle.svg"
+              alt="illustration-lifestyle"
+            />
+          </div>
+          <h4>Choose your lifestyle</h4>
+          <p>
+            Own your daily schedule. Fancy a lie-in? Go for it! Take charge of
+            your week.
+          </p>
+        </div>
+
+        <div class="feature__item feature__item--alternate">
+          <div class="feature__icon">
+            <img
+              src="./assets/illustration-work-anywhere.svg"
+              alt="illustration-work-anywhere"
+            />
+          </div>
+          <h4>Work from anywhere</h4>
+          <p>
+            Selling online means not being pinned down. Want to work AND travel?
+            Go for it!
+          </p>
+        </div>
+      </div>
     </main>
-
     <!-- 
-
-  
-
-  Indulge your passions
-  Your passions shouldn't be just for the weekend. Earn a living doing what you love.
-
-  Gain financial freedom
-  Start making money work for you. There’s nothing quite like earning while you sleep. 
-
-  Choose your lifestyle
-  Own your daily schedule. Fancy a lie-in? Go for it! Take charge of your week.
-
-  Work from anywhere
-  Selling online means not being pinned down. Want to work AND travel? Go for it!
-
   Our pricing plans
   We only make money when our creators make money. Our plans are always affordable, and 
   it’s completely free to get started.
