finished the feature section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <main class="main page__main">
       <div class="hero">
         <div class="hero__text">
-          <h1>Get paid for the work you love to do.</h1>
+          <h1>
+            Get paid for the work you
+            <span class="highlight-color">love</span> to do.
+          </h1>
           <p>
             The 9-5 grind is so last century. We believe in living life on your
             own terms. Whether you’re looking to escape the rat race or set up a
@@ -44,11 +47,13 @@
               alt="illustration-passions"
             />
           </div>
-          <h4>Indulge your passions</h4>
-          <p>
-            Your passions shouldn't be just for the weekend. Earn a living doing
-            what you love.
-          </p>
+          <div class="feature__text">
+            <h4>Indulge your passions</h4>
+            <p>
+              Your passions shouldn't be just for the weekend. Earn a living
+              doing what you love.
+            </p>
+          </div>
         </div>
 
         <div class="feature__item feature__item--alternate">
@@ -58,11 +63,13 @@
               alt="illustration-financial-freedom"
             />
           </div>
-          <h4>Gain financial freedom</h4>
-          <p>
-            Start making money work for you. There’s nothing quite like earning
-            while you sleep.
-          </p>
+          <div class="feature__text">
+            <h4>Gain financial freedom</h4>
+            <p>
+              Start making money work for you. There’s nothing quite like
+              earning while you sleep.
+            </p>
+          </div>
         </div>
 
         <div class="feature__item">
@@ -72,11 +79,13 @@
               alt="illustration-lifestyle"
             />
           </div>
-          <h4>Choose your lifestyle</h4>
-          <p>
-            Own your daily schedule. Fancy a lie-in? Go for it! Take charge of
-            your week.
-          </p>
+          <div class="feature__text">
+            <h4>Choose your lifestyle</h4>
+            <p>
+              Own your daily schedule. Fancy a lie-in? Go for it! Take charge of
+              your week.
+            </p>
+          </div>
         </div>
 
         <div class="feature__item feature__item--alternate">
@@ -86,11 +95,13 @@
               alt="illustration-work-anywhere"
             />
           </div>
-          <h4>Work from anywhere</h4>
-          <p>
-            Selling online means not being pinned down. Want to work AND travel?
-            Go for it!
-          </p>
+          <div class="feature__text">
+            <h4>Work from anywhere</h4>
+            <p>
+              Selling online means not being pinned down. Want to work AND
+              travel? Go for it!
+            </p>
+          </div>
         </div>
       </div>
     </main>
