--- a/index.html
+++ b/index.html
@@ -104,27 +104,66 @@
           </div>
         </div>
       </div>
+
+      <div class="pricing">
+        <div class="pricing__text">
+          <h3>Our pricing plans</h3>
+          <p>
+            We only make money when our creators make money. Our plans are
+            always affordable, and it’s completely free to get started.
+          </p>
+        </div>
+
+        <div class="pricing__card-container">
+          <div class="card">
+            <img
+              class="card__logo"
+              src="./assets/icon-free.svg"
+              alt="icon-free"
+            />
+            <h4>Dip your toe</h4>
+            <p>
+              Just getting started? No problem at all! Our free plan will take
+              you a long way.
+            </p>
+            <h2>Free</h2>
+            <ul class="card__list">
+              <li>Unlimited products</li>
+              <li>Basic analytics</li>
+              <li>Limited marketplace exposure</li>
+              <li>10% fee per transaction</li>
+            </ul>
+          </div>
+
+          <div class="card card--alternate">
+            <img
+              class="card__logo"
+              src="./assets/icon-paid.svg"
+              alt="icon-paid"
+            />
+            <h4>Dive right in</h4>
+            <p>
+              Ready for the big time? Our paid plan will help you take your
+              business to the next level.
+            </p>
+            <h2>$25.00 /month</h2>
+            <ul class="card__list">
+              <li>Custom domain</li>
+              <li>Advanced analytics and reports</li>
+              <li>High marketplace visibility</li>
+              <li>5% fee per transaction</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </main>
     <!-- 
-  Our pricing plans
-  We only make money when our creators make money. Our plans are always affordable, and 
-  it’s completely free to get started.
+  
+  
 
-  Dip your toe
-  Just getting started? No problem at all! Our free plan will take you a long way.
-  Free
-  Unlimited products
-  Basic analytics
-  Limited marketplace exposure
-  10% fee per transaction
+  
 
-  Dive right in
-  Ready for the big time? Our paid plan will help you take your business to the next level.
-  $25.00 /month
-  Custom domain
-  Advanced analytics and reports
-  High marketplace visibility
-  5% fee per transaction
+ 
 
   Get notified when we launch
   Email address
