--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             />
           </div>
           <div class="feature__text">
-            <h4>Indulge your passions</h4>
+            <h3>Indulge your passions</h3>
             <p>
               Your passions shouldn't be just for the weekend. Earn a living
               doing what you love.
@@ -64,7 +64,7 @@
             />
           </div>
           <div class="feature__text">
-            <h4>Gain financial freedom</h4>
+            <h3>Gain financial freedom</h3>
             <p>
               Start making money work for you. There’s nothing quite like
               earning while you sleep.
@@ -80,7 +80,7 @@
             />
           </div>
           <div class="feature__text">
-            <h4>Choose your lifestyle</h4>
+            <h3>Choose your lifestyle</h3>
             <p>
               Own your daily schedule. Fancy a lie-in? Go for it! Take charge of
               your week.
@@ -96,7 +96,7 @@
             />
           </div>
           <div class="feature__text">
-            <h4>Work from anywhere</h4>
+            <h3>Work from anywhere</h3>
             <p>
               Selling online means not being pinned down. Want to work AND
               travel? Go for it!
@@ -107,7 +107,7 @@
 
       <div class="pricing">
         <div class="pricing__text">
-          <h3>Our pricing plans</h3>
+          <h2>Our pricing plans</h2>
           <p>
             We only make money when our creators make money. Our plans are
             always affordable, and it’s completely free to get started.
@@ -121,12 +121,12 @@
               src="./assets/icon-free.svg"
               alt="icon-free"
             />
-            <h4>Dip your toe</h4>
+            <p class="card__title">Dip your toe</p>
             <p>
               Just getting started? No problem at all! Our free plan will take
               you a long way.
             </p>
-            <h2>Free</h2>
+            <p class="card__price">Free</p>
             <ul class="card__list">
               <li>Unlimited products</li>
               <li>Basic analytics</li>
@@ -141,12 +141,12 @@
               src="./assets/icon-paid.svg"
               alt="icon-paid"
             />
-            <h4>Dive right in</h4>
+            <p class="card__title">Dive right in</p>
             <p>
               Ready for the big time? Our paid plan will help you take your
               business to the next level.
             </p>
-            <h2>$25.00 /month</h2>
+            <p class="card__price">$25.00 /month</p>
             <ul class="card__list">
               <li>Custom domain</li>
               <li>Advanced analytics and reports</li>
