updated the aria roles and finished behaviour

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <header class="header page__header"></header>
 
     <main class="main page__main">
-      <div class="hero">
-        <div class="hero__text">
+      <section class="hero">
+        <div class="hero__text" role="presentation">
           <h1>
             Get paid for the work you
             <span class="highlight-color">love</span> to do.
@@ -37,10 +37,10 @@
             height="42"
           />
         </div>
-      </div>
+      </section>
 
-      <div class="feature">
-        <div class="feature__item">
+      <section class="feature">
+        <div class="feature__item" role="presentation">
           <div class="feature__icon">
             <img
               src="./assets/illustration-passions.svg"
@@ -56,7 +56,7 @@
           </div>
         </div>
 
-        <div class="feature__item feature__item--alternate">
+        <div class="feature__item feature__item--alternate" role="presentation">
           <div class="feature__icon">
             <img
               src="./assets/illustration-financial-freedom.svg"
@@ -72,7 +72,7 @@
           </div>
         </div>
 
-        <div class="feature__item">
+        <div class="feature__item" role="presentation">
           <div class="feature__icon">
             <img
               src="./assets/illustration-lifestyle.svg"
@@ -88,7 +88,7 @@
           </div>
         </div>
 
-        <div class="feature__item feature__item--alternate">
+        <div class="feature__item feature__item--alternate" role="presentation">
           <div class="feature__icon">
             <img
               src="./assets/illustration-work-anywhere.svg"
@@ -103,10 +103,10 @@
             </p>
           </div>
         </div>
-      </div>
+      </section>
 
-      <div class="pricing">
-        <div class="pricing__text">
+      <section class="pricing">
+        <div class="pricing__text" role="presentation">
           <h2>Our pricing plans</h2>
           <p>
             We only make money when our creators make money. Our plans are
@@ -114,7 +114,7 @@
           </p>
         </div>
 
-        <div class="pricing__card-container">
+        <div class="pricing__card-container" role="presentation">
           <div class="card">
             <img
               class="card__logo"
@@ -155,7 +155,7 @@
             </ul>
           </div>
         </div>
-      </div>
+      </section>
     </main>
 
     <footer class="footer page__footer">
@@ -176,53 +176,6 @@
       </form>
     </footer>
 
-    <script>
-      // There are many ways to pick a DOM node; here we get the form itself and the email
-      // input box, as well as the span element into which we will place the error message.
-      const form = document.querySelector("form");
-      const email = document.getElementById("mail");
-      const emailError = document.querySelector("#mail + span.error");
-
-      email.addEventListener("input", (event) => {
-        // Each time the user types something, we check if the
-        // form fields are valid.
-
-        if (email.validity.valid) {
-          // In case there is an error message visible, if the field
-          // is valid, we remove the error message.
-          emailError.textContent = ""; // Reset the content of the message
-          emailError.className = "error"; // Reset the visual state of the message
-        } else {
-          // If there is still an error, show the correct error
-          showError();
-        }
-      });
-
-      form.addEventListener("submit", (event) => {
-        // if the email field is valid, we let the form submit
-        if (!email.validity.valid) {
-          // If it isn't, we display an appropriate error message
-          showError();
-          // Then we prevent the form from being sent by canceling the event
-          event.preventDefault();
-        }
-      });
-
-      function showError() {
-        if (email.validity.valueMissing) {
-          // If the field is empty,
-          // display the following error message.
-          emailError.textContent = "You need to enter an email address.";
-        } else if (email.validity.typeMismatch) {
-          // If the field doesn't contain an email address,
-          // display the following error message.
-          emailError.textContent =
-            "Oops! That doesn’t look like an email address";
-        }
-        // Set the styling appropriately
-        emailError.className = "error error-text";
-        mail.className = "input invalid";
-      }
-    </script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
